tests/valid/integer_min_values.ar
fn main() 
{
    const u8_min: u8 = 0;
    const u16_min: u16 = 0;
    const u32_min: u32 = 0;
    const u64_min: u64 = 0;
    const i8_min: i8 = -128;
    const i16_min: i16 = -32768;
    const i32_min: i32 = -2147483648;
    const i64_min: i64 = -9223372036854775808;
    const default_integer_min = -2147483648;  // i32
}
