tests/invalid/binop_type_mismatch.ar
// errc: 18
fn main()
{
    // unsigned + signed
    {
        const a: u8;
        const b: i8;
        const c = a + b;
    }

    {
        const a: u16;
        const b: i16;
        const c = a + b;
    }

    {
        const a: u32;
        const b: i32;
        const c = a + b;
    }

    {
        const a: u64;
        const b: i64;
        const c = a + b;
    }

    // signed + unsigned
    {
        const a: i8;
        const b: u8;
        const c = a + b;
    }

    {
        const a: i16;
        const b: u16;
        const c = a + b;
    }

    {
        const a: i32;
        const b: u32;
        const c = a + b;
    }

    {
        const a: i64;
        const b: u64;
        const c = a + b;
    }

    // unsigned + signed (different sizes)
    {
        const a: u8;
        const b: i64;
        const c = a + b;
    }

    {
        const a: u16;
        const b: i64;
        const c = a + b;
    }

    {
        const a: u32;
        const b: i16;
        const c = a + b;
    }

    {
        const a: u64;
        const b: i8;
        const c = a + b;
    }

    {
        const a: u64;
        const b: i32;
        const c = a + b;
    }

    // signed + unsigned (different sizes)
    {
        const a: i8;
        const b: u64;
        const c = a + b;
    }

    {
        const a: i16;
        const b: u64;
        const c = a + b;
    }

    {
        const a: i32;
        const b: u16;
        const c = a + b;
    }

    {
        const a: i64;
        const b: u8;
        const c = a + b;
    }

    {
        const a: i64;
        const b: u32;
        const c = a + b;
    }
}
